[project]
name = "stt-data-augmentation"
version = "0.1.0"
description = "Data augmentation for speech recognition"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "audiomentations>=0.43.1",
    "auditok>=0.3.0",
    "librosa>=0.11.0",
    "numba>=0.62.1",
    "numpy>=2.3.4",
    "pydub>=0.25.1",
    "pyroomacoustics>=0.8.6",
    "soundfile>=0.13.1",
]
